cmake_minimum_required(VERSION 3.0)
project(Tetris)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(Tetris.run main.cpp Tetris.cpp Tetris.h Renderer.cpp Renderer.h Tetromino.cpp Tetromino.h)
target_compile_options(Tetris.run BEFORE PUBLIC "-g")
target_link_libraries(Tetris.run SDL2 GLEW GL)
file(COPY shaders DESTINATION .)
