cmake_minimum_required(VERSION 3.0[...3.12])
project(Tetris)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(Tetris.run main.cpp Tetris.cpp Renderer.cpp Tetromino.cpp)
target_compile_options(Tetris.run BEFORE PUBLIC "-g" "-Wall" "-Werror" "-Wextra" "-O3")
target_link_libraries(Tetris.run SDL2 GLEW GL)
file(COPY shaders DESTINATION .)
